git-svn-id: http://svn.vdombox.ru/flextools/trunk@6222 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/PageEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/PageEditor.mxml
@@ -113,12 +113,20 @@
 		<s:State name="disabled"/>
 	</s:states>
 
-	<components:PageRenderer id="renderer"
-							 height="100%" width="100%"
-							 includeIn="wysiwyg, wysiwygDisabled, normal, disabled"/>
+	<s:layout>
+		<s:VerticalLayout/>
+	</s:layout>
 
-	<editors:XMLScriptEditor id="xmlScriptEditor"
-							 height="100%" width="100%"
-							 includeIn="xml, xmlDisabled"/>
+	<s:Group height="100%" width="100%">
+		<components:PageRenderer id="renderer"
+								 height="100%" width="100%"
+								 includeIn="wysiwyg, wysiwygDisabled, normal, disabled"/>
+
+		<editors:XMLScriptEditor id="xmlScriptEditor"
+								 height="100%" width="100%"
+								 includeIn="xml, xmlDisabled"/>
+	</s:Group>
+
+	<components:ToolbarPanel height="100%"/>
 
 </s:SkinnableContainer>
