--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/ImageToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/ImageToolbar.mxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
-		  xmlns:s="library://ns.adobe.com/flex/spark"
+<s:HGroup xmlns:controls="net.vdombox.ide.modules.wysiwyg.view.components.controls.*"
+		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/mx"
-		  xmlns:controls="net.vdombox.ide.modules.wysiwyg.view.components.controls.*">
+		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  implements="net.vdombox.ide.modules.wysiwyg.interfaces.IToolbar">
 
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.common.vo.AttributeVO;
-			import net.vdombox.ide.modules.wysiwyg.view.components.ObjectRenderer;
-			import net.vdombox.ide.modules.wysiwyg.events.ToolbarEvent;
-
 			import mx.utils.StringUtil;
+
+			import net.vdombox.ide.common.vo.AttributeVO;
+			import net.vdombox.ide.modules.wysiwyg.events.ToolbarEvent;
+			import net.vdombox.ide.modules.wysiwyg.interfaces.IToolbar;
+			import net.vdombox.ide.modules.wysiwyg.view.components.ObjectRenderer;
 
 			private var elementForEditing : Object;
 
@@ -27,7 +29,7 @@
 			{
 				var result : Array = [];
 				var attributeVO : AttributeVO;
-				
+
 				if ( attributesObject )
 				{
 					for each ( attributeVO in attributesObject )
@@ -35,10 +37,10 @@
 						result.push( attributeVO );
 					}
 				}
-				
+
 				return result;
 			}
-			
+
 			public function init( item : ObjectRenderer ) : void
 			{
 				_item = item;
@@ -192,41 +194,32 @@
 	</fx:Script>
 
 	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/reset_size.png')" width="20"
-			  click="rollback()" />
+			   click="rollback()"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/rotate_left.png')"
-			  styleName="toolbarButton" width="20"
-			  click="rotate(0)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/rotate_left.png')" styleName="toolbarButton" width="20"
+			   click="rotate(0)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/rotate_right.png')"
-			  styleName="toolbarButton" width="20"
-			  click="rotate(1)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/rotate_right.png')" styleName="toolbarButton" width="20"
+			   click="rotate(1)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/flip_vertical.png')"
-			  styleName="toolbarButton" width="20"
-			  click="flip(0)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/flip_vertical.png')" styleName="toolbarButton" width="20"
+			   click="flip(0)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/flip_horizontal.png')"
-			  styleName="toolbarButton" width="20"
-			  click="flip(1)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/flip_horizontal.png')" styleName="toolbarButton" width="20"
+			   click="flip(1)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/contrast_up.png')"
-			  styleName="toolbarButton" width="20"
-			  click="contrast(.1)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/contrast_up.png')" styleName="toolbarButton" width="20"
+			   click="contrast(.1)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/contrast_down.png')"
-			  styleName="toolbarButton" width="20"
-			  click="contrast(-.1)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/contrast_down.png')" styleName="toolbarButton" width="20"
+			   click="contrast(-.1)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/brightness_up.png')"
-			  styleName="toolbarButton" width="20"
-			  click="brightness(.1)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/brightness_up.png')" styleName="toolbarButton" width="20"
+			   click="brightness(.1)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/brightness_down.png')"
-			  styleName="toolbarButton" width="20"
-			  click="brightness(-.1)" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/brightness_down.png')" styleName="toolbarButton" width="20"
+			   click="brightness(-.1)"/>
 
-	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/grayscale.png')"
-			  styleName="toolbarButton" width="20"
-			  click="greyscale()" />
+	<mx:Button height="20" icon="@Embed(source='assets/toolbars/imageToolbar/grayscale.png')" styleName="toolbarButton" width="20"
+			   click="greyscale()"/>
 </s:HGroup>
